JSA - Reporte Gasto vehicular
Terminado

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -113,6 +113,7 @@
                                 <li>@Html.ActionLink("Inv. Concepto", "InventarioXConcepto", "Reportes")</li>
                                 <li>@Html.ActionLink("Hst. Vs Ventas", "HistoricoVsVentas", "Reportes")</li>
                                 <li>@Html.ActionLink("Corte de Caja", "CorteCaja", "Reportes")</li>
+                                <li>@Html.ActionLink("Gasto Por Vehiculo", "GastoVehicular", "Reportes")</li>
                             </ul>
                         </li>
                         <li>
