--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Remanente/DashBoard.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Remanente/DashBoard.cshtml
@@ -30,7 +30,7 @@
     };
 </script>
 <body>
-    @using (Html.BeginForm("Remanente", "DashBoard", FormMethod.Post))
+    @using (Html.BeginForm("Buscar", "Remanente", FormMethod.Post))
     {
         <div class="page-loader-wrapper">
             <div class="loader">
@@ -117,6 +117,7 @@
                                     <table class="table table-striped table-hover">
                                         <thead>
                                             <tr>
+                                                <td><strong>Día</strong></td>
                                                 <td><strong>Inv. Inicial del mes</strong></td>
                                                 <td><strong>Compras descargas</strong></td>
                                                 <td><strong>Ventas (Camionetas y Pipas)</strong></td>
@@ -132,7 +133,17 @@
                                             {
                                                 foreach (var item in ViewBag.RemaGeneral)
                                                 {
-
+                                                   <tr>
+                                                       <td>@item.dia</td>
+                                                       <td>@item.InventarioInicial</td>
+                                                       <td>@item.AcumuladoCompras</td>
+                                                       <td>@item.Ventas</td>
+                                                       <td>@item.Carburacion</td>
+                                                       <td>@item.InventarioLibro</td>
+                                                       <td>@item.InventarioFisico</td>
+                                                       <td>@item.GasSobrante</td>
+                                                       <td>@item.RemanenteDecimal</td>
+                                                   </tr>
                                                 }
                                             }
                                         </tbody>
@@ -140,6 +151,7 @@
                                 </div>
                             </div>
                             <div id="RemaneteGeneralDatos">
+                                
                                 <div class="row clearfix">
                                     <div class="col-md-3">Remanente Generado al :</div>
                                     <div class="col-md-3"> (Toneladas)</div>
@@ -209,7 +221,7 @@
                                             {
                                                 foreach (var item in ViewBag.RemaPuntoVenta)
                                                 {
-
+                                                    
                                                 }
                                             }
                                     </table>
