--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
+    <link rel="stylesheet" href="~/assets/plugins/morrisjs/morris.css">
     <link href="~/Content/Site.css" rel="stylesheet" />
     <script src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
 
