--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -2,9 +2,8 @@
     ViewBag.Title = "Inicio -";
 }
 <script>
-    $(document).ready(function () {
-        Morris.Area(@Html.Raw(ViewBag.VentasRema));
-    });
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var myChart = new Chart(ctx, @Html.Raw(ViewBag.VentasRema.Json));
 </script>
 <section class="content home">
     <div class="container-fluid">
@@ -34,7 +33,7 @@
                     <div class="body">
                         <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-amber">battery_full</i></i></p>
                         <span>Ventas de Camionetas</span>
-                        <h3 class="m-b-10"><span class="number count-to" data-from="0" data-to="2078" data-speed="2000" data-fresh-interval="700">2078</span></h3>
+                        <h3 class="m-b-10"><span class="number count-to" data-from="0" data-to="@ViewBag.VentasRema.TotalCamionetas" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalCamionetas</span></h3>
                         <small class="text-muted">Kilogramos</small>
                     </div>
                 </div>
@@ -44,7 +43,7 @@
                     <div class="body">
                         <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-blue">local_shipping</i></p>
                         <span>Ventas de Pipas</span>
-                        <h3 class="m-b-10 number count-to" data-from="0" data-to="865" data-speed="2000" data-fresh-interval="700">865</h3>
+                        <h3 class="m-b-10 number count-to" data-from="0" data-to="@ViewBag.VentasRema.TotalPipas" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalPipas</h3>
                         <small class="text-muted">Kilogramos</small>
                     </div>
                 </div>
@@ -54,7 +53,7 @@
                     <div class="body">
                         <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-red">local_gas_station</i></p>
                         <span>Ventas de Estaciones</span>
-                        <h3 class="m-b-10 number count-to" data-from="0" data-to="3502" data-speed="2000" data-fresh-interval="700">3502</h3>
+                        <h3 class="m-b-10 number count-to" data-from="0" data-to="@ViewBag.VentasRema.TotalEstaciones" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalEstaciones</h3>
                         <small class="text-muted">Kilogramos</small>
                     </div>
                 </div>
@@ -64,7 +63,7 @@
                     <div class="body">
                         <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-green">functions</i></p>
                         <span>Total de venta</span>
-                        <h3 class="m-b-10 number count-to" data-from="0" data-to="78" data-speed="2000" data-fresh-interval="700">78</h3>
+                        <h3 class="m-b-10 number count-to" data-from="0" data-to="@ViewBag.VentasRema.TotalVetna" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalVetna</h3>
                         <small class="text-muted">Kilogramos</small>
                     </div>
                 </div>
@@ -77,9 +76,7 @@
                         <h2>DashBoard: <strong>Información general</strong></h2>
                     </div>
                     <div class="body m-b-10">
-                        <div id="m_area_Remanente">
-
-                        </div>
+                        <canvas id="myChart" style="width: 100%; height: 100%" ></canvas>
                     </div>
                 </div>
             </div>
