--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -146,7 +146,7 @@
                             <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">attach_money</i><span>Ventas</span> </a>
                             <ul class="ml-menu">
                                 <li>@Html.ActionLink("Caja General", "Index", "CajaGeneral")</li>
-                                <li>@Html.ActionLink("Caja General Estación", "Estacion", "CajaGeneral")</li>                              
+                                <li>@Html.ActionLink("Caja General Estación", "Estacion", "CajaGeneral")</li>
                             </ul>
                         </li>
                         <li>
@@ -155,7 +155,7 @@
                                 <li>@Html.ActionLink("Carga Informacion", "Index", "Historico")</li>
                                 <li>@Html.ActionLink("Historico Ventas", "HistoricoVentas", "Historico")</li>
                             </ul>
-                        </li>                     
+                        </li>
                         <li>
                             <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catálogos</span></a>
                             <ul class="ml-menu">
@@ -182,7 +182,7 @@
                                 <li>@Html.ActionLink("Precio de venta Otros", "Index", "PrecioVentaOtro")</li>
                             </ul>
                         </li>
-                      
+
                     }
                 </ul>
             </div>
@@ -196,9 +196,11 @@
 <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="~/assets/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
 <script src="~/assets/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
+<script src="~/assets/plugins/chartjs/Chart.bundle.js"></script>
 <script src="~/assets/plugins/momentjs/moment.js"></script>
 <script src="~/assets/bundles/mainscripts.bundle.js"></script>
 <script src="~/assets/bundles/morrisscripts.bundle.js"></script>
 <script src="~/assets/js/pages/charts/morris.js"></script>
+<script src="~/assets/js/pages/charts/chartjs.js"></script>
 
 @Styles.Render("~/Content/css")
