--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -13,7 +13,8 @@
     <link href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
-    <link rel="stylesheet" href="~/assets/plugins/morrisjs/morris.css">
+    @*<link rel="stylesheet" href="~/assets/plugins/morrisjs/morris.css">*@
+    <script src="~/assets/plugins/chartjs/Chart.min.js"></script>
     <link href="~/Content/Site.css" rel="stylesheet" />
     <script src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
 
@@ -196,11 +197,10 @@
 <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="~/assets/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
 <script src="~/assets/plugins/jquery-inputmask/jquery.inputmask.bundle.js"></script>
-<script src="~/assets/plugins/chartjs/Chart.bundle.js"></script>
+
 <script src="~/assets/plugins/momentjs/moment.js"></script>
 <script src="~/assets/bundles/mainscripts.bundle.js"></script>
-<script src="~/assets/bundles/morrisscripts.bundle.js"></script>
-<script src="~/assets/js/pages/charts/morris.js"></script>
-<script src="~/assets/js/pages/charts/chartjs.js"></script>
+@*<script src="~/assets/bundles/morrisscripts.bundle.js"></script>*@
+@*<script src="~/assets/js/pages/charts/morris.js"></script>*@
 
 @Styles.Render("~/Content/css")
